Refactor MetaKeys and ClusterSingletonProxy for better flexibility and maintainability
This commit refactors the `MetaKeys` class to support a more generic `StringCollectionMetaKey` and updates `ClusterSingletonProxy` to use `ClusterMemberAggregator` for handling member state changes, improving code organization and reducing redundancy.